[project]
name = "bbme"
version = "0.1.0"
description = "Bitbucket Mass Editor — find-and-replace across Bitbucket Cloud repositories"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
bbme = "bbme.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bbme"]
